syntax = "proto3";

package recordprocessor;

message RecordMove {
  int32 instance_id = 1;
  int32 from_folder = 2;
  int32 to_folder = 3;
  int64 move_date = 4;
}

message Moves {
  repeated RecordMove moves = 1;
}

message MoveRequest {
  RecordMove move = 1;
}

message MoveResponse {}

message ListRequest {}

message ListResponse {
  repeated RecordMove moves = 1;
}

message ClearRequest {
  int32 instance_id = 1;
}

message ClearResponse {}

service ScoreService {
  rpc RecordMove(MoveRequest) returns (MoveResponse) {};
  rpc ListMoves(ListRequest) returns (ListResponse) {};
  rpc ClearMove(ClearRequest) returns (ClearResponse) {};
}
